# vivid

./: CMakeLists.txt  README.md
module/: CMakeLists.txt  vividk.yml
module/include/: descriptors.h  vivid-private.h  vivid-user.h
module/src/: main.c
sce_sys/livearea/contents/: template.xml
src/: main.c
